# aws-aisupportagent

./: .gitignore  README.md  reflection.md
customer-support-agent/: main.py  pyproject.toml
customer-support-agent/agentcore/: agentcore.json  aws-targets.json
customer-support-agent/agentcore/.cli/: deployed-state.json
customer-support-agent/agentcore/cdk/: package-lock.json
starter/: main.py  product_catalog.txt  pyproject.toml
starter/lambda/: lambda_schema  order_tracker.py  order_tracker_schema  refund_processor.py
