[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.6.0",
    "bedrock-agentcore-starter-toolkit>=0.3.4",
    "nest-asyncio>=1.6.0",
    "strands-agents>=1.34.1",
    "playwright>=1.58.0",
    "strands-agents-tools>=0.3.0",
]

[tool.agentcore]
build_commands = ["playwright install chromium"]